--- a/index.html
+++ b/index.html
@@ -1,13 +1,175 @@
+<!--
+    Este é um exemplo de código HTML semântico que descreve o conteúdo de uma
+    página da web. O código começa com uma declaração <!DOCTYPE html>para 
+    especificar a versão do HTML que está sendo usado. Em seguida, uma tag 
+    <html>é usada para envolver todo o código HTML e a linguagem padrão é 
+    definida como "pt-br" usando o atributo "lang".
+-->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Projeto-Dindin</title>
-</head>
-<body>
-    <script src="./scripts.js"></script>
-</body>
+    <html lang="pt-br">
+<!--
+    Dentro do <head>, é especificado o conjunto de caracteres usados ​​pelo 
+    documento e o título da página é definido com uma tag <title>. Em 
+    seguida, o conteúdo do corpo do documento é definido dentro da tag 
+    <body>.
+-->
+    <head>
+        <meta charset="UTF-8">
+        <title>Exemplo de código semântico HTML</title>
+    </head>
+    <body>
+<!--
+    Dentro da tag <header>, há um logotipo e um menu de navegação que 
+    utiliza as tags <nav>e <ul>para criar uma lista de links. O atributo 
+    roleé usado para indicar o papel da lista, enquanto o atributo 
+    aria-levelé usado para indicar o nível de autoridade do menu.
+-->
+    <header>
+        <img src="imagem.jpg" alt="Descrição da imagem" srcset="">
+        <h1>Meu Site</h1>
+      <nav role="navigation" aria-level="main navigation">
+        <ul role="menu">
+          <li><a href="#" role="menuitem">CURSOS</a></li>
+          <li><a href="#" role="menuitem">BLOG</a></li>
+          <li><a href="#" role="menuitem">CONTATO</a></li>
+        </ul>
+      </nav>
+    </header>
+<!--
+    O conteúdo principal do site é definido dentro da tag <main>. Existem 
+    várias seções de conteúdo, cada uma envolvida em uma tag <section>. 
+    Cada seção contém um título <h2>, um ou mais cartões <section>que possuem 
+    uma imagem e um conteúdo de descrição <article>.
+-->
+    <main role="main">
+        <div>
+            <article>
+                <h2>Educação <br> Financeira <br>
+                    é tudo de bom
+                </h2>
+                <p>Vem comigo que te mostro <br>
+                    por onde começar
+                </p>
+                <button aria-label="Button A" aria-labelledby="button-label">
+                    quero saber mais
+                </button>
+                <img src="imagem.jpg" alt="Descrição da imagem" srcset=""><br><br>
+            </article>
+        </div>
+
+        <div>
+            <section class="card1">
+                <img src="imagem-do-card.jpg" alt="Descrição da imagem do card">
+                <article class="card-body">
+                  <h3>Título do card</h3>
+                  <p>Descrição do card</p>
+                  <button aria-label="Botão do card" aria-labelledby="button-label">Clique aqui</button>
+                </article>
+            </section>
+            <section class="card2">
+                <img src="imagem-do-card.jpg" alt="Descrição da imagem do card">
+                <article class="card-body">
+                  <h3>Título do card</h3>
+                  <p>Descrição do card</p>
+                  <button aria-label="Botão do card" aria-labelledby="button-label">Clique aqui</button>
+                </article>
+            </section>
+            <section class="card3">
+                <img src="imagem-do-card.jpg" alt="Descrição da imagem do card">
+                <article class="card-body">
+                  <h3>Título do card</h3>
+                  <p>Descrição do card</p>
+                  <button aria-label="Botão do card" aria-labelledby="button-label">Clique aqui</button>
+                </article>
+            </section>
+        </div>
+      
+        <div>
+            <h2>O QUE FALAM SOBRE NÓS</h2>
+            <section class="card4">
+                <img src="imagem-do-card.jpg" alt="Descrição da imagem do card">
+                <article class="card-body">
+                  <p>Descrição do card</p>
+                  <label for=""></label>
+                </article>
+            </section>
+            <section class="card5">
+                <img src="imagem-do-card.jpg" alt="Descrição da imagem do card">
+                <article class="card-body">
+                  <p>Descrição do card</p>
+                  <label for=""></label>
+                </article>
+            </section>
+            <section class="card6">
+                <img src="imagem-do-card.jpg" alt="Descrição da imagem do card">
+                <article class="card-body">
+                    <p>Descrição do card</p>
+                    <label for=""></label>
+                </article>
+            </section>
+            <section class="card7">
+                <img src="imagem-do-card.jpg" alt="Descrição da imagem do card">
+                <article class="card-body">
+                    <p>Descrição do card</p>
+                    <label for=""></label>
+                </article>
+            </section>
+        </div>
+        
+        <div>
+            <h2>MAIS CONTEÚDO PARA VOCÊ</h2>
+            <section class="card8">
+                <img src="imagem-do-card.jpg" alt="Descrição da imagem do card">
+                <article class="card-body">
+                    <h2>Título do card</h2>
+                    <p>Descrição do card</p>
+                </article>
+            </section>
+            <section class="card9">
+                <img src="imagem-do-card.jpg" alt="Descrição da imagem do card">
+                <article class="card-body">
+                    <h2>Título do card</h2>
+                    <p>Descrição do card</p>
+                </article>
+            </section>
+            <section class="card10">
+                <img src="imagem-do-card.jpg" alt="Descrição da imagem do card">
+                <article class="card-body">
+                    <h2>Título do card</h2>
+                    <p>Descrição do card</p>
+                </article>
+            </section>
+            <button aria-label="Botão do card" aria-labelledby="button-label">ver todos os posts</button>
+        </div>
+    </main>
+<!--
+    Finalmente, o rodapé é definido dentro da tag <footer>. Há um logotipo
+    e algumas informações básicas sobre o site, seguidos por uma lista de 
+    links usando uma tag <ul>.
+-->
+    <footer>
+            <img src="imagem.jpg" alt="Descrição da imagem" srcset="">
+            <label for="">dindin</label>
+            <p>educação financeira</p>
+            <ul>
+                <li><a href="#">CURSOS</a></li>
+                <li><a href="#">BLOG</a></li>
+                <li><a href="#">CONTATO</a></li>
+            </ul>
+            <button aria-label="Botão do card" aria-labelledby="button-label">quero ser prof</button>
+            <button aria-label="Botão do card" aria-labelledby="button-label">aqui tem outro link</button>
+        </footer>
+    </body>
+<!--
+    As imagens são adicionadas usando uma tag <img>. Atributos como altsão 
+    usados ​​para descrever uma imagem para fins de acessibilidade, enquanto o
+    atributo srcseté usado para especificar uma lista de imagens para 
+    diferentes evitar de tela.
+-->
+<!--
+    Há também vários botões no código que usam o atributo aria-labelpara 
+    descrever o objetivo do botão para fins de acessibilidade, enquanto o 
+    atributo aria-labelledbyé usado para vincular a descrição do botão a uma 
+    etiqueta correspondente.
+-->
 </html>
