--- a/contato.html
+++ b/contato.html
@@ -1,4 +1,5 @@
-<!--
+<!DOCTYPE html>
+
     <main role="main">
         <h2>Contato</h2>
 
@@ -21,5 +22,5 @@
         </form>
     
         <img src="imagem.jpg" alt="Descrição da imagem" srcset="">
-    <main>
--->
+    </main>
+    </html>
