--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css">
-    <title>Exemplo de código semântico HTML</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <title>Projeto dindin</title>
     <script defer src="scripts.js"></script>
     <script defer src="contato.html"></script>
     <script defer src="blog.html"></script>
@@ -73,21 +76,24 @@
             <div class="cont1">
                 <img src="img/2image.svg" alt="Descrição da imagem do card">
                 <h2 class="title1">Investimentos para iniciantes</h2>
-                <p>Duis aute irure dolor in reprehenderit <br> in voluptate velit es se cillum dolore <br> eu fugiat nulla pariatur.</p>
+                <p>Duis aute irure dolor in reprehenderit <br> in voluptate velit es se cillum dolore <br> eu fugiat
+                    nulla pariatur.</p>
                 <button class="btn1" aria-label="Botão do card" aria-labelledby="button-label">Começar Agora</button>
             </div>
 
             <div class="cont2">
                 <img src="img/3image.svg" alt="Descrição da imagem do card">
                 <p class="title2">Poupando e rendendo</p>
-                <p>Duis aute irure dolor in reprehenderit <br> in voluptate velit es se cillum dolore <br> eu fugiat nulla pariatur.</p>
+                <p>Duis aute irure dolor in reprehenderit <br> in voluptate velit es se cillum dolore <br> eu fugiat
+                    nulla pariatur.</p>
                 <button class="btn2" aria-label="Botão do card" aria-labelledby="button-label">Começar Agora</button>
             </div>
 
             <div class="cont3">
                 <img src="img/4image.svg" alt="Descrição da imagem do card">
                 <p class="title3">Independencia financeira</p>
-                <p>Duis aute irure dolor in reprehenderit <br> in voluptate velit es se cillum dolore <br> eu fugiat nulla pariatur.</p>
+                <p>Duis aute irure dolor in reprehenderit <br> in voluptate velit es se cillum dolore <br> eu fugiat
+                    nulla pariatur.</p>
                 <button class="btn3" aria-label="Botão do card" aria-labelledby="button-label">Começar Agora</button>
             </div>
         </section>
@@ -103,7 +109,8 @@
                 </div>
                 <div class="card">
                     <p class="card-text1">
-                        ”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.”
+                        ”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                        laudantium, totam rem aperiam.”
                     </p>
                     <p class="card-text2">Wally, 25</p>
                 </div>
@@ -114,7 +121,8 @@
                 </div>
                 <div class="card">
                     <p class="card-text3">
-                        ”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.”
+                        ”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                        laudantium, totam rem aperiam.”
                     </p>
                     <p class="card-text4">Wally, 25</p>
                 </div>
@@ -127,7 +135,8 @@
                 </div>
                 <div class="card">
                     <p class="card-text5">
-                        ”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.”
+                        ”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                        laudantium, totam rem aperiam.”
                     </p>
                     <p class="card-text6">Wally, 25</p>
                 </div>
@@ -137,36 +146,42 @@
                 </div>
                 <div class="card">
                     <p class="card-text7">
-                        ”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.”
+                        ”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                        laudantium, totam rem aperiam.”
                     </p>
                     <p class="card-text8">Wally, 25</p>
                 </div>
             </div>
         </section>
-      
+
         <section class="secao4">
             <p class="titulo2">MAIS CONTEÚDO PARA VOCÊ</p>
             <div class="linha1">
                 <div class="colum1">
                     <img class="foto1" src="./img/img-finance1.jpg" alt="Descrição">
                     <p class="titulo3">Itaque earum rerum</p>
-                    <p class="text9">hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
+                    <p class="text9">hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias
+                        consequatur aut perferendis doloribus asperiores repellat.</p>
                 </div>
                 <div class="colum2">
                     <img class="foto2" src="./img/img-finance2.jpg" alt="Descrição">
                     <p class="titulo4">Itaque earum rerum</p>
-                    <p class="text10">hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
+                    <p class="text10">hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias
+                        consequatur aut perferendis doloribus asperiores repellat.</p>
                 </div>
                 <div class="colum3">
                     <img class="foto3" src="./img/img-finance3.jpg" alt="Descrição">
                     <p class="titulo5">Itaque earum rerum</p>
-                    <p class="text11">hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
+                    <p class="text11">hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias
+                        consequatur aut perferendis doloribus asperiores repellat.</p>
 
                 </div>
             </div>
-            <a class="button3" aria-label="Button A" aria-labelledby="button-label">
-                ver todos os posts
-            </a>
+            <div class="ver-posts">
+                <a aria-label="Button A" aria-labelledby="button-label">
+                    ver todos os posts
+                </a>
+            </div>
         </section>
 
 
@@ -177,34 +192,28 @@
     links usando uma tag <ul>.
 -->
 
-<footer>
-    <div class="div_rod">
-        <img src="img/dindin-logo-white.svg" alt="Descrição da imagem" srcset="" class="img_rod">
-        <ul>
-            <li>
-                <p class="texto"><label for="">dindin</label> <br> educação financeira</p>
-            </li>
-            <li>
-                <br> educação financeira</p>
-            </li>
-        </ul>
-    </div>
+    <footer class="footer">
+        <div class="container3">
+            <img class="img-1" src="img/dindin-logo-white.svg" alt="Descrição da imagem" srcset="">
+            <div class="container4">
+                <p class="dindin">dindin</p>
+                <p class="edu-finan">educação financeira</p>
+            </div>
+        </div>
 
-    <div class="div_rod">
-        <ul>
-            <li><a href="#">CURSOS</a></li>
-            <li><a href="#">BLOG</a></li>
-            <li><a href="#">CONTATO</a></li>
-        </ul>
-    </div>
+        <div class="container5">
 
-    <div class="div_rod">
-        <ul>
-            <li><button aria-label="Botão do card" aria-labelledby="button-label">quero ser prof</button></li>
-            <li><button aria-label="Botão do card" aria-labelledby="button-label">aqui tem outro link</button></li>
-        </ul>
-    </div>
-</footer>
+            <a href="#">CURSOS</a>
+            <a href="#">BLOG</a>
+            <a href="#">CONTATO</a>
+
+        </div>
+
+        <div class="container6">
+            <a class="text12" aria-label="Botão do card" aria-labelledby="button-label">quero ser prof</a>
+            <a class="text13" aria-label="Botão do card" aria-labelledby="button-label">aqui tem outro link</a>
+        </div>
+    </footer>
 </body>
 <!--
     As imagens são adicionadas usando uma tag <img>. Atributos como altsão 
