tela cursos finalizada

--- a/contato.html
+++ b/contato.html
@@ -20,7 +20,7 @@
 
     <header class="header">
         <div class="logo">
-            <a href="#">
+            <a href="./index.html">
                 <img src="img/dindin-logo-white.svg" alt="Descrição da imagem">
             </a>
             <p>dindin</p>
