--- a/blog.html
+++ b/blog.html
@@ -1,12 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Cursos</title>
 </head>
 <body>
+    <header class="header">
+        <div class="logo">
+            <a href="./index.html">
+                <img src="img/dindin-logo-white.svg" alt="Descrição da imagem">
+            </a>
+            <p>dindin</p>
+        </div>
+        <nav role="navigation" aria-level="main navigation" class="nav">
+            <ul role="menu" class="menu">
+                <li><a href="./cursos.html" role="menuitem">CURSOS</a></li>
+                <li><a href="./blog.html" role="menuitem">BLOG</a></li>
+                <li><a href="./contato.html" role="menuitem">CONTATO</a></li>
+            </ul>
+        </nav>
+    </header>
     <h1>vc esta na pagina de blog</h1>
+    <h1>vc esta na pagina de blog</h1>
+    <h1>vc esta na pagina de blog</h1>
+    <h1>vc esta na pagina de blog</h1>
+    <h1>vc esta na pagina de blog</h1>
+    <h1>vc esta na pagina de blog</h1>
+    <h1>vc esta na pagina de blog</h1>
+    <h1>vc esta na pagina de blog</h1>
+    <h1>vc esta na pagina de blog</h1>
+    <h1>vc esta na pagina de blog</h1>
+    <h1>vc esta na pagina de blog</h1>
+    <h1>vc esta na pagina de blog</h1>
+    <h1>vc esta na pagina de blog</h1>
+    <h1>vc esta na pagina de blog</h1>
+    <h1>vc esta na pagina de blog</h1>
+    <h1>vc esta na pagina de blog</h1>
+    <h1>vc esta na pagina de blog</h1>
+    <h1>vc esta na pagina de blog</h1>
+    <h1>vc esta na pagina de blog</h1>
+    <h1>vc esta na pagina de blog</h1>
+    
+
+    <footer class="footer">
+        <div class="container3">
+            <img class="img-1" src="img/dindin-logo-white.svg" alt="Descrição da imagem" srcset="">
+            <div class="container4">
+                <p class="dindin">dindin</p>
+                <p class="edu-finan">educação financeira</p>
+            </div>
+        </div>
+
+        <div class="container5">
+
+            <a href="#">CURSOS</a>
+            <a href="#">BLOG</a>
+            <a href="#">CONTATO</a>
+
+        </div>
+
+        <div class="container6">
+            <a class="text12" aria-label="Botão do card" aria-labelledby="button-label">quero ser prof</a>
+            <a class="text13" aria-label="Botão do card" aria-labelledby="button-label">aqui tem outro link</a>
+        </div>
+    </footer>
 </body>
 </html>
