--- a/html/contato.html
+++ b/html/contato.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
-    <title>Exemplo de código semântico HTML</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../contatos.css">
+    <title>Document</title>
 </head>
-
 <body>
 
-    <header>
-
-        <img src="imagem.jpg" alt="Descrição da imagem" srcset="">
-        <label for=""><a href="index.html" role="menuitem">Meu Site</a></label>
-
-        <nav role="navigation" aria-level="main navigation">
-
-            <ul role="menu">
-
-                <li><a href="#" role="menuitem">CURSOS</a></li>
-                <li><a href="#" role="menuitem">BLOG</a></li>
-                <li><a href="contato.html" role="menuitem">CONTATO</a></li>
-
+    <header class="header">
+        <div class="logo">
+            <a href="../index.html">
+                <img class="logo-1" src="../img/dindin-logo-white.svg" alt="Descrição da imagem">
+            </a>
+            <p>dindin</p>
+        </div>
+        <nav role="navigation" aria-level="main navigation" class="nav">
+            <ul role="menu" class="menu">
+                <li><a href="../html/cursos.html" role="menuitem">CURSOS</a></li>
+                <li><a href="../html/blog.html" role="menuitem">BLOG</a></li>
+                <li><a href="../html/contato.html" role="menuitem">CONTATO</a></li>
             </ul>
-
         </nav>
-
     </header>
 
     <main role="main">
@@ -49,28 +48,49 @@
         </form>
 
         <img src="imagem.jpg" alt="Descrição da imagem" srcset="">
+
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     </main>
 
-    <footer>
-        <div>
-            <img src="imagem.jpg" alt="Descrição da imagem" srcset="">
-            <label for="">dindin</label>
-            <p>educação financeira</p>
+    <footer class="footer">
+        <div class="container3">
+            <a href="../index.html"><img class="img-1" src="../img/dindin-logo-white.svg" alt="Descrição da imagem" srcset=""></a>
+            <div class="container4">
+                <p class="dindin">dindin</p>
+                <p class="edu-finan">educação financeira</p>
+            </div>
         </div>
 
-        <div>
-            <ul>
-                <li><a href="#">CURSOS</a></li>
-                <li><a href="#">BLOG</a></li>
-                <li><a href="#">CONTATO</a></li>
-            </ul>
+        <div class="container5">
+
+            <a href="../html/cursos.html">CURSOS</a>
+            <a href="../html/blog.html">BLOG</a>
+            <a href="../html/contato.html">CONTATO</a>
+
         </div>
 
-        <div>
-            <button aria-label="Botão do card" aria-labelledby="button-label">quero ser prof</button>
-            <button aria-label="Botão do card" aria-labelledby="button-label">aqui tem outro link</button>
+        <div class="container6">
+            <a class="text12" aria-label="Botão do card" aria-labelledby="button-label">quero ser prof</a>
+            <a class="text13" aria-label="Botão do card" aria-labelledby="button-label">aqui tem outro link</a>
         </div>
     </footer>
 </body>
-
 </html>
