--- a/html/cursos.html
+++ b/html/cursos.html
@@ -1,57 +1,103 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Exemplo de código semântico HTML</title>
-    <link rel="stylesheet" type="text/css" href="css/header.css" />
-    <link rel="stylesheet" type="text/css" href="main.css" />
-    <script defer src="scripts.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../cursos.css">
+    <title>cursos</title>
 </head>
-
 <body>
     <header class="header">
-        <a href="" class="logo">
-            <img src="img/dindin-logo-white.svg" alt="Descrição da imagem" srcset="">
-            <label for="">Meu Site</label>
-        </a>
+        <div class="logo">
+            <a href="../index.html">
+                <img class="logo-1" src="../img/dindin-logo-white.svg" alt="imagem">
+            </a>
+            <p>dindin</p>
+        </div>
         <nav role="navigation" aria-level="main navigation" class="nav">
-            <button class="btn-menu" id="menu" aria-label="Abrir Menu" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
-                            Menu<span class="hamburger"></span></label>
-                </button>
             <ul role="menu" class="menu">
-                <li><a href="#" role="menuitem">CURSOS</a></li>
-                <li><a href="#" role="menuitem">BLOG</a></li>
-                <li><a href="#" role="menuitem">CONTATO</a></li>
+                <li><a href="./curso.html" role="menuitem">CURSOS</a></li>
+                <li><a href="./blog.html" role="menuitem">BLOG</a></li>
+                <li><a href="./contato.html" role="menuitem">CONTATO</a></li>
             </ul>
         </nav>
     </header>
 
-    <main role="main">
-    </main>
+    <div class="curso-container1">
+        <p class="curso-text1">Cursos</p>
+        <p class="curso-text2">Educação financeira</p>
+    </div>
 
-    <footer>
-        <div>
-            <img src="imagem.jpg" alt="Descrição da imagem" srcset="">
-            <label for="">dindin</label>
-            <p>educação financeira</p>
+    <div class="curso-secao1">
+        <div class="curso-img1">
+            <img src="../img/2image.svg" alt="foto curdo 1">
+            <div class="curso-container1">
+                <p class="curso-text3">Investimento para iniciantes</p>
+                <p class="curso-text4">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+                    doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
+                    veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
+                    ipsam voluptatem quia voluptas sit aspernatur aut odit aut</p>
+                <a class="curso-text5" href="#">Começar agora</a>
+            </div>
         </div>
 
-        <div>
-            <ul>
-                <li><a href="#">CURSOS</a></li>
-                <li><a href="#">BLOG</a></li>
-                <li><a href="#">CONTATO</a></li>
-            </ul>
+    </div>
+    <div class="linha"></div>
+
+    <div class="curso-secao02">
+        <div class="curso-img02">
+            <img src="../img/3image.svg" alt="foto curdo 1">
+            <div class="curso-container02">
+                <p class="curso-text04">Investimento para iniciantes</p>
+                <p class="curso-text05">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+                    doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
+                    veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
+                    ipsam voluptatem quia voluptas sit aspernatur aut odit aut</p>
+                <a class="curso-text06" href="#">Começar agora</a>
+            </div>
         </div>
 
-        <div>
-            <button aria-label="Botão do card" aria-labelledby="button-label">quero ser prof</button>
-            <button aria-label="Botão do card" aria-labelledby="button-label">aqui tem outro link</button>
+    </div>
+    <div class="linha"></div>
+
+    <div class="curso-secao003">
+        <div class="curso-img003">
+            <img src="../img/4image.svg" alt="foto curdo 1">
+            <div class="curso-container004">
+                <p class="curso-text005">Investimento para iniciantes</p>
+                <p class="curso-text006">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+                    doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
+                    veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
+                    ipsam voluptatem quia voluptas sit aspernatur aut odit aut</p>
+                <a class="curso-text007" href="#">Começar agora</a>
+            </div>
+        </div>
+
+    </div>
+
+    <footer class="footer">
+        <div class="container3">
+            <a href="../index.html"><img class="img-1" src="../img/dindin-logo-white.svg" alt="Descrição da imagem" srcset=""></a>
+            <div class="container4">
+                <p class="dindin">dindin</p>
+                <p class="edu-finan">educação financeira</p>
+            </div>
+        </div>
+
+        <div class="container5">
+
+            <a href="../html/cursos.html">CURSOS</a>
+            <a href="../html/blog.html">BLOG</a>
+            <a href="../contatos.css">CONTATO</a>
+
+        </div>
+
+        <div class="container6">
+            <a class="text12" aria-label="Botão do card" aria-labelledby="button-label">quero ser prof</a>
+            <a class="text13" aria-label="Botão do card" aria-labelledby="button-label">aqui tem outro link</a>
         </div>
     </footer>
 </body>
-
 </html>
