--- a/html/post.html
+++ b/html/post.html
@@ -1,57 +1,74 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Exemplo de código semântico HTML</title>
-    <link rel="stylesheet" type="text/css" href="css/header.css" />
-    <link rel="stylesheet" type="text/css" href="main.css" />
-    <script defer src="scripts.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
+    <title>post</title>
 </head>
-
 <body>
     <header class="header">
-        <a href="" class="logo">
-            <img src="img/dindin-logo-white.svg" alt="Descrição da imagem" srcset="">
-            <label for="">Meu Site</label>
-        </a>
+        <div class="logo">
+            <a href="../index.html">
+                <img class="logo-1" src="../img/dindin-logo-white.svg" alt="Descrição da imagem">
+            </a>
+            <p>dindin</p>
+        </div>
         <nav role="navigation" aria-level="main navigation" class="nav">
-            <button class="btn-menu" id="menu" aria-label="Abrir Menu" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
-                            Menu<span class="hamburger"></span></label>
-                </button>
             <ul role="menu" class="menu">
-                <li><a href="#" role="menuitem">CURSOS</a></li>
-                <li><a href="#" role="menuitem">BLOG</a></li>
-                <li><a href="#" role="menuitem">CONTATO</a></li>
+                <li><a href="./html/cursos.html" role="menuitem">CURSOS</a></li>
+                <li><a href="./html/blog.html" role="menuitem">BLOG</a></li>
+                <li><a href="./html/contato.html" role="menuitem">CONTATO</a></li>
             </ul>
         </nav>
     </header>
 
     <main role="main">
+        <h1>Posts</h1>
+        <h1>Posts</h1>
+        <h1>Posts</h1>
+        <h1>Posts</h1>
+        <h1>Posts</h1>
+        <h1>Posts</h1>
+        <h1>Posts</h1>
+        <h1>Posts</h1>
+        <h1>Posts</h1>
+        <h1>Posts</h1>
+        <h1>Posts</h1>
+        <h1>Posts</h1>
+        <h1>Posts</h1>
+        <h1>Posts</h1>
+        <h1>Posts</h1>
+        <h1>Posts</h1>
+        <h1>Posts</h1>
+        <h1>Posts</h1>
+        <h1>Posts</h1>
+        <h1>Posts</h1>
+        <h1>Posts</h1>
     </main>
 
-    <footer>
-        <div>
-            <img src="imagem.jpg" alt="Descrição da imagem" srcset="">
-            <label for="">dindin</label>
-            <p>educação financeira</p>
+    <footer class="footer">
+        <div class="container3">
+            <a href="../index.html"><img class="img-1" src="../img/dindin-logo-white.svg" alt="Descrição da imagem" srcset=""></a>
+            <div class="container4">
+                <p class="dindin">dindin</p>
+                <p class="edu-finan">educação financeira</p>
+            </div>
         </div>
 
-        <div>
-            <ul>
-                <li><a href="#">CURSOS</a></li>
-                <li><a href="#">BLOG</a></li>
-                <li><a href="#">CONTATO</a></li>
-            </ul>
+        <div class="container5">
+
+            <a href="../html/cursos.html">CURSOS</a>
+            <a href="../html/blog.html">BLOG</a>
+            <a href="../html/contato.html">CONTATO</a>
+
         </div>
 
-        <div>
-            <button aria-label="Botão do card" aria-labelledby="button-label">quero ser prof</button>
-            <button aria-label="Botão do card" aria-labelledby="button-label">aqui tem outro link</button>
+        <div class="container6">
+            <a class="text12" aria-label="Botão do card" aria-labelledby="button-label">quero ser prof</a>
+            <a class="text13" aria-label="Botão do card" aria-labelledby="button-label">aqui tem outro link</a>
         </div>
     </footer>
 </body>
-
 </html>
