--- a/html/blog.html
+++ b/html/blog.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../blog.css">
     <title>Blog</title>
 </head>
 <body>
@@ -23,28 +24,83 @@
             </ul>
         </nav>
     </header>
-    <h1>vc esta na pagina de blog</h1>
-    <h1>vc esta na pagina de blog</h1>
-    <h1>vc esta na pagina de blog</h1>
-    <h1>vc esta na pagina de blog</h1>
-    <h1>vc esta na pagina de blog</h1>
-    <h1>vc esta na pagina de blog</h1>
-    <h1>vc esta na pagina de blog</h1>
-    <h1>vc esta na pagina de blog</h1>
-    <h1>vc esta na pagina de blog</h1>
-    <h1>vc esta na pagina de blog</h1>
-    <h1>vc esta na pagina de blog</h1>
-    <h1>vc esta na pagina de blog</h1>
-    <h1>vc esta na pagina de blog</h1>
-    <h1>vc esta na pagina de blog</h1>
-    <h1>vc esta na pagina de blog</h1>
-    <h1>vc esta na pagina de blog</h1>
-    <h1>vc esta na pagina de blog</h1>
-    <h1>vc esta na pagina de blog</h1>
-    <h1>vc esta na pagina de blog</h1>
-    <h1>vc esta na pagina de blog</h1>
     
+    <section class="blog-secao1">
+        <div class="blog-container1">
+            <h1>Mais conteúdo <br>para você</h1>
+            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
+               sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+        </div>
+        <div class="blog-container2">
+            <img class="blog-foto1" src="../img/9image.svg" alt="Descrição da imagem" srcset="">
+        </div>
+    </section>
 
+    <section class="blog-secao2">
+        <div class="blog-cont1">
+            <img class="blog-foto-card1" src="../img/img-finance4.jpg" alt="Descrição da imagem do card">
+            <h2 class="blog-title1">On the other hand, we denounce</h2>
+            <p class="blog-paragrafo1">On the other hand, we denounce with righteous indignation and <br> dislike men who 
+                are so beguiled and demoralized by the charms of <br> pleasure of the moment, so 
+                blinded by desire, that they cannot <br> foresee the pain and trouble that are bound.</p>
+        </div>
+
+        <div class="blog-cont1">
+            <img class="blog-foto-card1" src="../img/img-finance5.jpg" alt="Descrição da imagem do card">
+            <h2 class="blog-title1">On the other hand, we denounce</h2>
+            <p class="blog-paragrafo1">On the other hand, we denounce with righteous indignation and <br> dislike men who 
+                are so beguiled and demoralized by the charms of <br> pleasure of the moment, so 
+                blinded by desire, that they cannot <br> foresee the pain and trouble that are bound.</p>
+        </div>
+    </section>
+
+    <section class="blog-secao2">
+        <div class="blog-cont1">
+            <img class="blog-foto-card1" src="../img/img-finance6.jpg" alt="Descrição da imagem do card">
+            <h2 class="blog-title1">On the other hand, we denounce</h2>
+            <p class="blog-paragrafo1">On the other hand, we denounce with righteous indignation and <br> dislike men who 
+                are so beguiled and demoralized by the charms of <br> pleasure of the moment, so 
+                blinded by desire, that they cannot <br> foresee the pain and trouble that are bound.</p>
+        </div>
+
+        <div class="blog-cont1">
+            <img class="blog-foto-card1" src="../img/img-finance7.jpg" alt="Descrição da imagem do card">
+            <h2 class="blog-title1">On the other hand, we denounce</h2>
+            <p class="blog-paragrafo1">On the other hand, we denounce with righteous indignation and <br> dislike men who 
+                are so beguiled and demoralized by the charms of <br> pleasure of the moment, so 
+                blinded by desire, that they cannot <br> foresee the pain and trouble that are bound.</p>
+        </div>
+    </section>
+
+    <section class="blog-secao2">
+        <div class="blog-cont1">
+            <img class="blog-foto-card1" src="../img/img-finance8.jpg" alt="Descrição da imagem do card">
+            <h2 class="blog-title1">On the other hand, we denounce</h2>
+            <p class="blog-paragrafo1">On the other hand, we denounce with righteous indignation and <br> dislike men who 
+                are so beguiled and demoralized by the charms of <br> pleasure of the moment, so 
+                blinded by desire, that they cannot <br> foresee the pain and trouble that are bound.</p>
+        </div>
+
+        <div class="blog-cont1">
+            <img class="blog-foto-card1" src="../img/img-finance9.jpg" alt="Descrição da imagem do card">
+            <h2 class="blog-title1">On the other hand, we denounce</h2>
+            <p class="blog-paragrafo1">On the other hand, we denounce with righteous indignation and <br> dislike men who 
+                are so beguiled and demoralized by the charms of <br> pleasure of the moment, so 
+                blinded by desire, that they cannot <br> foresee the pain and trouble that are bound.</p>
+        </div>
+    </section>
+
+    <section class="blog-secao2">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+    </section>
+    
     <footer class="footer">
         <div class="container3">
             <a href="../index.html"><img class="img-1" src="../img/dindin-logo-white.svg" alt="Descrição da imagem" srcset=""></a>
