modificacoes em aula com sarlete e bruno e eu

--- a/html/cursos.html
+++ b/html/cursos.html
@@ -18,9 +18,9 @@
         </div>
         <nav role="navigation" aria-level="main navigation" class="nav">
             <ul role="menu" class="menu">
-                <li><a href="./curso.html" role="menuitem">CURSOS</a></li>
-                <li><a href="./blog.html" role="menuitem">BLOG</a></li>
-                <li><a href="./contato.html" role="menuitem">CONTATO</a></li>
+                <li><a href="../html/cursos.html" role="menuitem">CURSOS</a></li>
+                <li><a href="../html/blog.html" role="menuitem">BLOG</a></li>
+                <li><a href="../html/contato.html" role="menuitem">CONTATO</a></li>
             </ul>
         </nav>
     </header>
@@ -90,7 +90,7 @@
 
             <a href="../html/cursos.html">CURSOS</a>
             <a href="../html/blog.html">BLOG</a>
-            <a href="../contatos.css">CONTATO</a>
+            <a href="../html/contato.html">CONTATO</a>
 
         </div>
 
