finalisando cursos washiner

--- a/html/curso-03.html
+++ b/html/curso-03.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../contatos.css">
+    <link rel="stylesheet" href="../curso-01.css">
     <title>Document</title>
 </head>
+
 <body>
 
     <header class="header">
@@ -26,31 +28,73 @@
         </nav>
     </header>
 
-    <h1>pagina curso 1 </h1>
-    <h1>pagina curso 1 </h1>
-    <h1>pagina curso 1 </h1>
-    <h1>pagina curso 1 </h1>
-    <h1>pagina curso 1 </h1>
-    <h1>pagina curso 1 </h1>
-    <h1>pagina curso 1 </h1>
-    <h1>pagina curso 1 </h1>
-    <h1>pagina curso 1 </h1>
-    <h1>pagina curso 1 </h1>
-    <h1>pagina curso 1 </h1>
-    <h1>pagina curso 1 </h1>
-    <h1>pagina curso 1 </h1>
-    <h1>pagina curso 1 </h1>
-    <h1>pagina curso 1 </h1>
-    <h1>pagina curso 1 </h1>
-    <h1>pagina curso 1 </h1>
+    <section class="curso1-secao1">
+        <div class="curso1-container1">
+            <h1>Independência <br>Financeira</h1>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+                architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
+                voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
+                eos qui ratione voluptatem sequi nesciunt. </p>
+        </div>
+        <div class="curso1-container2">
+            <img class="curso1-foto1" src="../img/2image.svg" alt="Descrição da imagem" srcset="">
+        </div>
+    </section>
 
- 
-        
-   
-
+    <section class="curso-secao-color">
+        <div class="curso1-secao1">
+            <div class="curso1-img1">
+                <img class="curso1-play1" src="../img/play3.jpg" alt="foto curdo 1">
+                <div class="curso1-container001">
+                    <p class="curso1-text3">Aula 1</p>
+                    <p class="curso1-text4">Nemo enim ipsam voluptatem quia voluptas sit <br> aspernatur
+                        aut odit aut fugit, sed quia consequuntur <br> magni dolores eos qui ratione
+                        voluptatem sequi <br> nesciunt. <br>
+                        <br>
+                        <p>Ipsam voluptatem quia voluptas sit aspernatur aut odit <br> aut fugit, sed quia
+                            consequuntur magni dolores eos qui <br> ratione voluptatem sequi nesciunt. </p>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="linha"></div>
+        <div class="curso1-secao1">
+            <div class="curso1-img1">
+                <img class="curso1-play1" src="../img/play2.png" alt="foto curdo 1">
+                <div class="curso1-container001">
+                    <p class="curso1-text3">Aula 2</p>
+                    <p class="curso1-text4">Nemo enim ipsam voluptatem quia voluptas sit <br> aspernatur
+                        aut odit aut fugit, sed quia consequuntur <br> magni dolores eos qui ratione
+                        voluptatem sequi <br> nesciunt. <br>
+                        <br>
+                        <p>Ipsam voluptatem quia voluptas sit aspernatur aut odit <br> aut fugit, sed quia
+                            consequuntur magni dolores eos qui <br> ratione voluptatem sequi nesciunt. </p>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="linha"></div>
+        <div class="curso1-secao1">
+            <div class="curso1-img1">
+                <img class="curso1-play1" src="../img/play1.png" alt="foto curdo 1">
+                <div class="curso1-container001">
+                    <p class="curso1-text3">Aula 3</p>
+                    <p class="curso1-text4">Nemo enim ipsam voluptatem quia voluptas sit <br> aspernatur
+                        aut odit aut fugit, sed quia consequuntur <br> magni dolores eos qui ratione
+                        voluptatem sequi <br> nesciunt. <br>
+                        <br>
+                        <p>Ipsam voluptatem quia voluptas sit aspernatur aut odit <br> aut fugit, sed quia
+                            consequuntur magni dolores eos qui <br> ratione voluptatem sequi nesciunt. </p>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer class="footer">
         <div class="container3">
-            <a href="../index.html"><img class="img-1" src="../img/dindin-logo-white.svg" alt="Descrição da imagem" srcset=""></a>
+            <a href="../index.html"><img class="img-1" src="../img/dindin-logo-white.svg" alt="Descrição da imagem"
+                    srcset=""></a>
             <div class="container4">
                 <p class="dindin">dindin</p>
                 <p class="edu-finan">educação financeira</p>
@@ -71,4 +115,5 @@
         </div>
     </footer>
 </body>
+
 </html>
