--- a/html/cursos.html
+++ b/html/cursos.html
@@ -99,5 +99,6 @@
             <a class="text13" aria-label="Botão do card" aria-labelledby="button-label">aqui tem outro link</a>
         </div>
     </footer>
+    <script src="../modal.js"></script>
 </body>
 </html>
